syntax="proto3";

package api.chat_server_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package="github.com/markgenuine/chat-server/pkg/chat_server_v1;chat_server_v1";

service ChatServerV1 {
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Delete(DeleteRequest) returns(google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns(google.protobuf.Empty);
}

message CreateRequest {
  repeated string usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  int64 chatId = 1;
  string from = 2;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}